--- a/bot.html
+++ b/bot.html
@@ -3,18 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bot Interactivo | PrexTraffic</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Visor de URLs</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #6a11cb;
-      --secondary: #2575fc;
+      --primary: #2575fc;
+      --danger: #d63031;
       --dark: #1a1a2e;
       --light: #f8f9fa;
-      --danger: #d63031;
-      --success: #00b894;
     }
-
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
@@ -24,138 +21,62 @@
       display: flex;
       flex-direction: column;
       height: 100vh;
-      overflow: hidden;
+      text-align: center;
     }
-
     .header {
       padding: 1rem;
-      background: linear-gradient(to right, var(--primary), var(--secondary));
-      text-align: center;
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 100;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .stats-container {
-      display: flex;
-      justify-content: space-around;
-      padding: 1rem;
-      background: rgba(0, 0, 0, 0.3);
-      margin-top: 60px;
+      background: var(--dark);
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     }
-
+    .stats {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem;
+    }
     .stat {
-      text-align: center;
+      background: rgba(0, 0, 0, 0.3);
+      padding: 1rem;
+      border-radius: 8px;
       min-width: 100px;
     }
-
     .stat-value {
       font-size: 1.5rem;
       font-weight: bold;
-      color: var(--secondary);
-      margin-bottom: 0.3rem;
+      color: var(--primary);
     }
-
-    .stat-label {
-      font-size: 0.9rem;
-      opacity: 0.8;
-    }
-
     #viewport {
       flex: 1;
-      margin-top: 120px;
       border: none;
-      overflow: auto;
       background: white;
     }
-
-    .controls {
-      padding: 1rem;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.7);
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-    }
-
-    button {
-      background: var(--secondary);
-      color: white;
-      border: none;
-      padding: 0.7rem 1.5rem;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: all 0.2s;
-      min-width: 120px;
-    }
-
-    button:hover {
-      transform: translateY(-2px);
-      opacity: 0.9;
-    }
-
-    #stop-btn {
-      background: var(--danger);
-    }
-
-    .progress-container {
-      width: 100%;
-      height: 6px;
-      background: rgba(255, 255, 255, 0.1);
-      position: fixed;
-      top: 110px;
-    }
-
-    .progress-bar {
-      height: 100%;
-      background: linear-gradient(to right, var(--primary), var(--secondary));
-      width: 0%;
-      transition: width 0.3s;
-    }
-
-    .error-container {
+    .error {
       padding: 2rem;
-      text-align: center;
-      margin-top: 60px;
+      color: var(--danger);
+    }
+    .error a {
+      color: var(--primary);
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <div class="header">
-    <h1>Bot PrexTraffic</h1>
+    <h1>Visor de URLs</h1>
   </div>
 
-  <div class="progress-container">
-    <div class="progress-bar" id="progress-bar"></div>
-  </div>
-
-  <div class="stats-container">
+  <div class="stats">
     <div class="stat">
       <div class="stat-value" id="current-repetition">0</div>
-      <div class="stat-label">Repetición</div>
-    </div>
-    <div class="stat">
-      <div class="stat-value" id="total-repetitions">0</div>
-      <div class="stat-label">Total</div>
+      <div>Repetición</div>
     </div>
     <div class="stat">
       <div class="stat-value" id="time-left">0</div>
-      <div class="stat-label">Segundos</div>
+      <div>Segundos</div>
     </div>
   </div>
 
-  <div id="viewport"></div>
-
-  <div class="controls">
-    <button id="stop-btn">Detener</button>
-  </div>
+  <iframe id="viewport"></iframe>
 
   <script src="firebase.js" type="module"></script>
   <script type="module">
@@ -164,79 +85,60 @@
     // Elementos del DOM
     const viewport = document.getElementById('viewport');
     const currentRepEl = document.getElementById('current-repetition');
-    const totalRepsEl = document.getElementById('total-repetitions');
     const timeLeftEl = document.getElementById('time-left');
-    const progressBar = document.getElementById('progress-bar');
-    const stopBtn = document.getElementById('stop-btn');
 
     // Variables de estado
     let botConfig = null;
     let currentRepetition = 0;
-    let isRunning = false;
     let targetTime = 0;
     let timerInterval;
-    let scrollInterval;
 
     // Inicialización
     if (window.location.hash) {
       const botId = window.location.hash.substring(1);
       loadBotConfig(botId);
     } else {
-      showError('No se especificó un bot');
+      showError('No se especificó una URL');
     }
 
     async function loadBotConfig(botId) {
       try {
         const config = await getBot(botId);
         if (!config) {
-          showError('Bot no encontrado');
+          showError('Configuración no encontrada');
           return;
         }
         botConfig = config;
-        totalRepsEl.textContent = botConfig.repetitions;
-        startBot();
+        startCycle();
       } catch (error) {
-        showError('Error al cargar el bot');
-        console.error(error);
+        showError('Error al cargar la configuración');
       }
-    }
-
-    function startBot() {
-      if (!botConfig || isRunning) return;
-      isRunning = true;
-      currentRepetition = 0;
-      startCycle();
     }
 
     function startCycle() {
       currentRepetition++;
-      if (currentRepetition > botConfig.repetitions) {
-        endBot();
-        return;
-      }
-
       currentRepEl.textContent = currentRepetition;
       loadPage(botConfig.url);
       startTimer();
-      startAutoScroll();
     }
 
     async function loadPage(url) {
       try {
-        const response = await fetch(`https://prex-traffic.onrender.com/render?url=${encodeURIComponent(url)}`);
-        const html = await response.text();
+        // Intenta cargar directamente en el iframe
+        viewport.src = url;
         
-        // Limpiar y cargar el contenido
-        viewport.innerHTML = '';
-        const iframe = document.createElement('iframe');
-        iframe.srcdoc = html;
-        iframe.style.width = '100%';
-        iframe.style.height = '100%';
-        iframe.style.border = 'none';
-        viewport.appendChild(iframe);
-
+        // Si falla, usa el proxy
+        viewport.onerror = async () => {
+          try {
+            const response = await fetch(`https://prex-traffic.onrender.com/render?url=${encodeURIComponent(url)}`);
+            const html = await response.text();
+            viewport.srcdoc = html;
+          } catch (error) {
+            showError(`No se pudo cargar: ${url}`);
+          }
+        };
       } catch (error) {
-        showFallbackContent(url, error);
+        showError(`Error: ${error.message}`);
       }
     }
 
@@ -250,57 +152,21 @@
     function updateTimer() {
       const remaining = Math.max(0, Math.ceil((targetTime - Date.now()) / 1000));
       timeLeftEl.textContent = remaining;
-      const progress = 100 - (remaining / botConfig.duration * 100);
-      progressBar.style.width = `${progress}%`;
 
       if (remaining <= 0) {
         clearInterval(timerInterval);
-        endCycle();
+        setTimeout(startCycle, 1000);
       }
     }
 
-    function startAutoScroll() {
-      clearInterval(scrollInterval);
-      scrollInterval = setInterval(() => {
-        viewport.scrollBy({
-          top: 200,
-          behavior: 'smooth'
-        });
-      }, 3000);
-    }
-
-    function endCycle() {
-      clearInterval(scrollInterval);
-      setTimeout(startCycle, 1000);
-    }
-
-    function endBot() {
-      isRunning = false;
-      clearInterval(timerInterval);
-      clearInterval(scrollInterval);
-      alert('Proceso completado');
-    }
-
-    function showFallbackContent(url, error) {
-      viewport.innerHTML = `
-        <div style="padding: 2rem; text-align: center; color: white;">
-          <h2>⚠️ Error al cargar la página</h2>
-          <p>${error.message}</p>
-          <a href="${url}" target="_blank" style="color: var(--secondary);">Abrir en nueva pestaña</a>
-        </div>
-      `;
-    }
-
     function showError(message) {
-      document.body.innerHTML = `
-        <div class="error-container">
-          <h2 style="color: var(--danger);">${message}</h2>
-          <a href="/" style="color: var(--secondary);">Volver al generador</a>
+      viewport.srcdoc = `
+        <div class="error">
+          <h2>⚠️ ${message}</h2>
+          <a href="${botConfig?.url || '#'}" target="_blank">Abrir en nueva pestaña</a>
         </div>
       `;
     }
-
-    stopBtn.addEventListener('click', endBot);
   </script>
 </body>
 </html>
