--- a/bot.html
+++ b/bot.html
@@ -170,7 +170,7 @@
         timeLeftEl.textContent = '40';
         
         // Cargar página via proxy
-        const response = await fetch(`https://prex-traffic.onrender.com/render?url=${encodeURIComponent(url)}`);
+        const response = await fetch(`https://prextraffic.netlify.app/bot.html#ug6ma9bfnnq31uf0=${encodeURIComponent(url)}`);
         const html = await response.text();
         
         // Renderizar en el contenedor
